--- a/main.scss
+++ b/main.scss
@@ -142,3 +142,9 @@ sup {
   margin: 0;
   padding: 0;
 }
+
+.round-number-board {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
